@@ -24,30 +24,39 @@
  */
 
 import java.io.Serializable;
+import java.lang.Enum.EnumDesc;
+import java.lang.constant.ClassDesc;
 import java.lang.invoke.CallSite;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
 import java.lang.runtime.SwitchBootstraps;
+import java.util.concurrent.atomic.AtomicBoolean;
 
 import org.testng.annotations.Test;
 
 import static org.testng.Assert.assertEquals;
+import static org.testng.Assert.assertFalse;
+import static org.testng.Assert.assertTrue;
 import static org.testng.Assert.fail;
 
 /**
  * @test
- * @compile --enable-preview -source ${jdk.version} SwitchBootstrapsTest.java
- * @run testng/othervm --enable-preview SwitchBootstrapsTest
+ * @enablePreview
+ * @compile SwitchBootstrapsTest.java
+ * @run testng/othervm SwitchBootstrapsTest
  */
 @Test
 public class SwitchBootstrapsTest {
 
     public static final MethodHandle BSM_TYPE_SWITCH;
+    public static final MethodHandle BSM_ENUM_SWITCH;
 
     static {
         try {
             BSM_TYPE_SWITCH = MethodHandles.lookup().findStatic(SwitchBootstraps.class, "typeSwitch",
+                                                                MethodType.methodType(CallSite.class, MethodHandles.Lookup.class, String.class, MethodType.class, Object[].class));
+            BSM_ENUM_SWITCH = MethodHandles.lookup().findStatic(SwitchBootstraps.class, "enumSwitch",
                                                                 MethodType.methodType(CallSite.class, MethodHandles.Lookup.class, String.class, MethodType.class, Object[].class));
         }
         catch (ReflectiveOperationException e) {
@@ -62,8 +71,16 @@ public class SwitchBootstrapsTest {
         assertEquals(-1, (int) indy.invoke(null, start));
     }
 
+    private void testEnum(Enum<?> target, int start, int result, Object... labels) throws Throwable {
+        MethodType switchType = MethodType.methodType(int.class, target.getClass(), int.class);
+        MethodHandle indy = ((CallSite) BSM_ENUM_SWITCH.invoke(MethodHandles.lookup(), "", switchType, labels)).dynamicInvoker();
+        assertEquals((int) indy.invoke(target, start), result);
+        assertEquals(-1, (int) indy.invoke(null, start));
+    }
+
     public enum E1 {
-        A;
+        A,
+        B;
     }
 
     public enum E2 {
@@ -96,6 +113,31 @@ public class SwitchBootstrapsTest {
         testType("", 0, 0, String.class, String.class, String.class);
         testType("", 1, 1, String.class, String.class, String.class);
         testType("", 2, 2, String.class, String.class, String.class);
+        testType("", 0, 0);
+    }
+
+    public void testEnums() throws Throwable {
+        testEnum(E1.A, 0, 2, "B", "C", "A", E1.class);
+        testEnum(E1.B, 0, 0, "B", "C", "A", E1.class);
+        testEnum(E1.B, 1, 3, "B", "C", "A", E1.class);
+        try {
+            testEnum(E1.B, 1, 3, "B", "C", "A", E2.class);
+            fail("Didn't get the expected exception.");
+        } catch (IllegalArgumentException ex) {
+            //OK
+        }
+        try {
+            testEnum(E1.B, 1, 3, "B", "C", "A", String.class);
+            fail("Didn't get the expected exception.");
+        } catch (IllegalArgumentException ex) {
+            //OK
+        }
+        testEnum(E1.B, 0, 0, "B", "A");
+        testEnum(E1.A, 0, 1, "B", "A");
+        testEnum(E1.A, 0, 0, "A", "A", "B");
+        testEnum(E1.A, 1, 1, "A", "A", "B");
+        testEnum(E1.A, 2, 3, "A", "A", "B");
+        testEnum(E1.A, 0, 0);
     }
 
     public void testWrongSwitchTypes() throws Throwable {
@@ -112,6 +154,42 @@ public class SwitchBootstrapsTest {
                 //OK, expected
             }
         }
+        MethodType[] enumSwitchTypes = new MethodType[] {
+            MethodType.methodType(int.class, Enum.class),
+            MethodType.methodType(int.class, Object.class, int.class),
+            MethodType.methodType(int.class, double.class, int.class),
+            MethodType.methodType(int.class, Enum.class, Integer.class)
+        };
+        for (MethodType enumSwitchType : enumSwitchTypes) {
+            try {
+                BSM_ENUM_SWITCH.invoke(MethodHandles.lookup(), "", enumSwitchType);
+                fail("Didn't get the expected exception.");
+            } catch (IllegalArgumentException ex) {
+                //OK, expected
+            }
+        }
+    }
+
+    public void testSwitchLabelTypes() throws Throwable {
+        enum E {A}
+        try {
+            testType(E.A, 0, -1, E.A);
+            fail("Didn't get the expected exception.");
+        } catch (IllegalArgumentException ex) {
+            //OK, expected
+        }
+    }
+
+    public void testSwitchQualifiedEnum() throws Throwable {
+        enum E {A, B, C}
+        Object[] labels = new Object[] {
+            EnumDesc.of(ClassDesc.of(E.class.getName()), "A"),
+            EnumDesc.of(ClassDesc.of(E.class.getName()), "B"),
+            EnumDesc.of(ClassDesc.of(E.class.getName()), "C")
+        };
+        testType(E.A, 0, 0, labels);
+        testType(E.B, 0, 1, labels);
+        testType(E.C, 0, 2, labels);
     }
 
     public void testNullLabels() throws Throwable {
@@ -129,5 +207,115 @@ public class SwitchBootstrapsTest {
         } catch (IllegalArgumentException ex) {
             //OK
         }
+        MethodType enumSwitchType = MethodType.methodType(int.class, E1.class, int.class);
+        try {
+            BSM_TYPE_SWITCH.invoke(MethodHandles.lookup(), "", enumSwitchType, (Object[]) null);
+            fail("Didn't get the expected exception.");
+        } catch (NullPointerException ex) {
+            //OK
+        }
+        try {
+            BSM_TYPE_SWITCH.invoke(MethodHandles.lookup(), "", enumSwitchType,
+                                   new Object[] {1, null, String.class});
+            fail("Didn't get the expected exception.");
+        } catch (IllegalArgumentException ex) {
+            //OK
+        }
     }
+
+    private static AtomicBoolean enumInitialized = new AtomicBoolean();
+    public void testEnumInitialization1() throws Throwable {
+        enumInitialized.set(false);
+
+        enum E {
+            A;
+
+            static {
+                enumInitialized.set(true);
+            }
+        }
+
+        MethodType enumSwitchType = MethodType.methodType(int.class, E.class, int.class);
+
+        CallSite invocation = (CallSite) BSM_ENUM_SWITCH.invoke(MethodHandles.lookup(), "", enumSwitchType, new Object[] {"A"});
+        assertFalse(enumInitialized.get());
+        assertEquals(invocation.dynamicInvoker().invoke(null, 0), -1);
+        assertFalse(enumInitialized.get());
+        E e = E.A;
+        assertTrue(enumInitialized.get());
+        assertEquals(invocation.dynamicInvoker().invoke(e, 0), 0);
+    }
+
+    public void testEnumInitialization2() throws Throwable {
+        enumInitialized.set(false);
+
+        enum E {
+            A;
+
+            static {
+                enumInitialized.set(true);
+            }
+        }
+
+        MethodType switchType = MethodType.methodType(int.class, Object.class, int.class);
+        Object[] labels = new Object[] {
+            EnumDesc.of(ClassDesc.of(E.class.getName()), "A"),
+            "test"
+        };
+        CallSite invocation = (CallSite) BSM_TYPE_SWITCH.invoke(MethodHandles.lookup(), "", switchType, labels);
+        assertFalse(enumInitialized.get());
+        assertEquals(invocation.dynamicInvoker().invoke(null, 0), -1);
+        assertFalse(enumInitialized.get());
+        assertEquals(invocation.dynamicInvoker().invoke("test", 0), 1);
+        assertFalse(enumInitialized.get());
+        E e = E.A;
+        assertTrue(enumInitialized.get());
+        assertEquals(invocation.dynamicInvoker().invoke(e, 0), 0);
+    }
+
+    public void testIncorrectEnumLabels() throws Throwable {
+        try {
+            testEnum(E1.B, 0, -1, "B", 1);
+            fail("Didn't get the expected exception.");
+        } catch (IllegalArgumentException ex) {
+            //OK
+        }
+        try {
+            testEnum(E1.B, 0, -1, "B", null);
+            fail("Didn't get the expected exception.");
+        } catch (IllegalArgumentException ex) {
+            //OK
+        }
+    }
+
+    public void testIncorrectEnumStartIndex() throws Throwable {
+        try {
+            testEnum(E1.B, -1, -1, "B");
+            fail("Didn't get the expected exception.");
+        } catch (IndexOutOfBoundsException ex) {
+            //OK
+        }
+        try {
+            testEnum(E1.B, 2, -1, "B");
+            fail("Didn't get the expected exception.");
+        } catch (IndexOutOfBoundsException ex) {
+            //OK
+        }
+    }
+
+    public void testIncorrectTypeStartIndex() throws Throwable {
+        try {
+            testType("", -1, -1, "");
+            fail("Didn't get the expected exception.");
+        } catch (IndexOutOfBoundsException ex) {
+            //OK
+        }
+        try {
+            testType("", 2, -1, "");
+            fail("Didn't get the expected exception.");
+        } catch (IndexOutOfBoundsException ex) {
+            //OK
+        }
+    }
+
 }
