@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,26 +23,26 @@
 
 /*
  * @test
- * @bug 8262891
+ * @bug 8262891 8270151
  * @summary Verify pattern switches work properly when the set of sealed types changes.
- * @compile --enable-preview -source ${jdk.version} SealedTypeChanges.java
- * @compile --enable-preview -source ${jdk.version} SealedTypeChanges2.java
- * @run main/othervm --enable-preview SealedTypeChanges
+ * @compile SealedTypeChanges.java
+ * @compile SealedTypeChanges2.java
+ * @run main SealedTypeChanges
  */
 
 import java.util.function.Consumer;
 
 public class SealedTypeChanges {
-
     public static void main(String... args) throws Exception {
         new SealedTypeChanges().run();
     }
 
     void run() throws Exception {
-        doRun(this::expressionIntf, this::validateIncompatibleClassChangeError);
-        doRun(this::statementIntf, this::validateIncompatibleClassChangeError);
-        doRun(this::expressionCls, this::validateIncompatibleClassChangeError);
-        doRun(this::statementCls, this::validateIncompatibleClassChangeError);
+        doRun(this::expressionIntf, this::validateMatchException);
+        doRun(this::statementIntf, this::validateMatchException);
+        doRun(this::expressionCls, this::validateMatchException);
+        doRun(this::statementCls, this::validateMatchException);
+        doRun(this::statementFallThrough, this::validateMatchException);
         doRun(this::expressionCoveredIntf, this::validateTestException);
         doRun(this::statementCoveredIntf, this::validateTestException);
         doRun(this::expressionCoveredCls, this::validateTestException);
@@ -59,8 +59,8 @@ public class SealedTypeChanges {
         }
     }
 
-    void validateIncompatibleClassChangeError(Throwable t) {
-        if (!(t instanceof IncompatibleClassChangeError)) {
+    void validateMatchException(Throwable t) {
+        if (!(t instanceof MatchException)) {
             throw new AssertionError("Unexpected exception", t);
         }
     }
@@ -86,6 +86,12 @@ public class SealedTypeChanges {
     void statementCls(SealedTypeChangesCls obj) {
         switch (obj) {
             case A a -> System.err.println(1);
+        }
+    }
+
+    void statementFallThrough(SealedTypeChangesCls obj) {
+        switch (obj) {
+            case A a: System.err.println(1);
         }
     }
 
