@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2017, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,15 +22,14 @@
  */
 
 import java.util.Objects;
+import java.util.function.BiFunction;
 import java.util.function.Consumer;
 import java.util.function.Function;
 
 /*
  * @test
- * @bug 8262891
+ * @bug 8262891 8268333 8268896 8269802 8269808 8270151 8269113 8277864 8290709
  * @summary Check behavior of pattern switches.
- * @compile --enable-preview -source ${jdk.version} Switches.java
- * @run main/othervm --enable-preview Switches
  */
 public class Switches {
 
@@ -50,18 +49,62 @@ public class Switches {
         runEnumTest(this::testEnumExpression2);
         runEnumTest(this::testEnumWithGuards1);
         runEnumTest(this::testEnumWithGuards2);
+        runEnumTest(this::testEnumWithGuards3);
+        runEnumTest(this::testEnumWithGuards4);
+        runEnumTest(this::testEnumWithGuards5);
         runEnumTest(this::testEnumWithGuardsExpression1);
         runEnumTest(this::testEnumWithGuardsExpression2);
+        runEnumTest(this::testEnumWithGuardsExpression3);
+        runEnumTest(this::testEnumWithGuardsExpression4);
+        runEnumTest(this::testEnumWithGuardsExpression5);
         runEnumTest(this::testStringWithGuards1);
         runEnumTest(this::testStringWithGuardsExpression1);
         runEnumTest(this::testIntegerWithGuards1);
         runEnumTest(this::testIntegerWithGuardsExpression1);
         runStringWithConstant(this::testStringWithConstant);
         runStringWithConstant(this::testStringWithConstantExpression);
+        runFallThrough(this::testFallThroughStatement);
+        runFallThrough(this::testFallThroughExpression);
+        runFallThrough(this::testFallThrough2Statement);
+        runFallThrough(this::testFallThrough2Expression);
         npeTest(this::npeTestStatement);
         npeTest(this::npeTestExpression);
+        npeTest(this::switchOverNullNPE);
         exhaustiveStatementSane("");
         exhaustiveStatementSane(null);
+        exhaustiveStatementSane2(null);
+        exhaustiveStatementSane2(new A());
+        exhaustiveStatementSane2(new B());
+        switchNestingTest(this::switchNestingStatementStatement);
+        switchNestingTest(this::switchNestingStatementExpression);
+        switchNestingTest(this::switchNestingExpressionStatement);
+        switchNestingTest(this::switchNestingExpressionExpression);
+        switchNestingTest(this::switchNestingIfSwitch);
+        npeTest(x -> switchOverNull1());
+        assertEquals(2, switchOverNull2());
+        assertEquals(2, switchOverNull3());
+        assertEquals(5, switchOverPrimitiveInt(0));
+        assertEquals(7, switchOverPrimitiveInt(1));
+        assertEquals(9, switchOverPrimitiveInt(2));
+        assertEquals("a", deconstructStatement(new R("a")));
+        assertEquals("1", deconstructStatement(new R(1)));
+        assertEquals("other", deconstructStatement(""));
+        assertEquals("a", deconstructExpression(new R("a")));
+        assertEquals("1", deconstructExpression(new R(1)));
+        assertEquals("other", deconstructExpression(""));
+        assertEquals("a", translationTest("a"));
+        assertEquals("Rb", translationTest(new R("b")));
+        assertEquals("R2c", translationTest(new R2("c")));
+        assertEquals("other", translationTest(0));
+        assertEquals("OK", totalPatternAndNull(Integer.valueOf(42)));
+        assertEquals("OK", totalPatternAndNull(null));
+        assertEquals("1", nullAfterTotal(Integer.valueOf(42)));
+        assertEquals("OK", nullAfterTotal(null));
+        emptyFallThrough(1);
+        emptyFallThrough("");
+        emptyFallThrough(1.0);
+        testSimpleSwitch();
+        testSimpleSwitchExpression();
     }
 
     void run(Function<Object, Integer> mapper) {
@@ -81,6 +124,13 @@ public class Switches {
         assertEquals("", mapper.apply(1.0));
     }
 
+    void runDefaultTest(Function<Object, String> mapper) {
+        assertEquals("default", mapper.apply(new int[0]));
+        assertEquals("str6", mapper.apply("string"));
+        assertEquals("default", mapper.apply(1));
+        assertEquals("default", mapper.apply(1.0));
+    }
+
     void runEnumTest(Function<E, String> mapper) {
         assertEquals("a", mapper.apply(E.A));
         assertEquals("b", mapper.apply(E.B));
@@ -95,6 +145,10 @@ public class Switches {
         assertEquals(-1, mapper.apply(null));
     }
 
+    void runFallThrough(Function<Integer, Integer> mapper) {
+        assertEquals(2, mapper.apply(1));
+    }
+
     void npeTest(Consumer<I> testCase) {
         try {
             testCase.accept(null);
@@ -102,6 +156,13 @@ public class Switches {
         } catch (NullPointerException ex) {
             //OK
         }
+    }
+
+    void switchNestingTest(BiFunction<Object, Object, String> testCase) {
+        assertEquals("string, string", testCase.apply("", ""));
+        assertEquals("string, other", testCase.apply("", 1));
+        assertEquals("other, string", testCase.apply(1, ""));
+        assertEquals("other, other", testCase.apply(1, 1));
     }
 
     int typeTestPatternSwitchTest(Object o) {
@@ -192,7 +253,8 @@ public class Switches {
         return switch (e) {
             case A -> "a";
             case B -> "b";
-            case null, E x -> String.valueOf(x);
+            case E x -> String.valueOf(x);
+            case null -> "null";
         };
     }
 
@@ -200,7 +262,8 @@ public class Switches {
         return switch (e) {
             case A -> "a";
             case B -> "b";
-            case E x, null -> String.valueOf(x);
+            case E x -> String.valueOf(x);
+            case null -> "null";
         };
     }
 
@@ -208,9 +271,10 @@ public class Switches {
         switch (e) {
             case A: return "a";
             case B: return "b";
-            case E x && "A".equals(x.name()): return "broken";
             case C: return String.valueOf(e);
-            case null, E x: return String.valueOf(x);
+            case E x when "A".equals(x.name()): return "broken";
+            case E x: return String.valueOf(x);
+            case null: return "null";
         }
     }
 
@@ -218,9 +282,10 @@ public class Switches {
         return switch (e) {
             case A -> "a";
             case B -> "b";
-            case E x && "A".equals(x.name()) -> "broken";
             case C -> String.valueOf(e);
-            case null, E x -> String.valueOf(x);
+            case E x when "A".equals(x.name()) -> "broken";
+            case E x -> String.valueOf(x);
+            case null -> "null";
         };
     }
 
@@ -228,9 +293,9 @@ public class Switches {
         switch (e) {
             case A: return "a";
             case B: return "b";
-            case E x && "C".equals(x.name()): return "C";
-            case C: return "broken";
-            case null, E x: return String.valueOf(x);
+            case E x when "C".equals(x.name()): return "C";
+            case E x: return e == E.C ? "broken" : String.valueOf(x);
+            case null: return "null";
         }
     }
 
@@ -238,29 +303,91 @@ public class Switches {
         return switch (e) {
             case A -> "a";
             case B -> "b";
-            case E x && "C".equals(x.name()) -> "C";
-            case C -> "broken";
-            case null, E x -> String.valueOf(x);
+            case E x when "C".equals(x.name()) -> "C";
+            case E x -> e == E.C ? "broken" : String.valueOf(x);
+            case null -> "null";
+        };
+    }
+
+    String testEnumWithGuards3(E e) {
+        switch (e) {
+            case A: return "a";
+            case B: return "b";
+            case Object x when "C".equals(x.toString()): return "C";
+            case E x: return e == E.C ? "broken" : String.valueOf(x);
+            case null: return "null";
+        }
+    }
+
+    String testEnumWithGuardsExpression3(E e) {
+        return switch (e) {
+            case A -> "a";
+            case B -> "b";
+            case Object x when "C".equals(x.toString()) -> "C";
+            case E x -> e == E.C ? "broken" : String.valueOf(x);
+            case null -> "null";
+        };
+    }
+
+    String testEnumWithGuards4(E e) {
+        switch (e) {
+            case A: return "a";
+            case B: return "b";
+            case Runnable x when "C".equals(x.toString()): return "C";
+            case E x: return e == E.C ? "broken" : String.valueOf(x);
+            case null: return "null";
+        }
+    }
+
+    String testEnumWithGuardsExpression4(E e) {
+        return switch (e) {
+            case A -> "a";
+            case B -> "b";
+            case Runnable x when "C".equals(x.toString()) -> "C";
+            case E x -> e == E.C ? "broken" : String.valueOf(x);
+            case null -> "null";
+        };
+    }
+
+    String testEnumWithGuards5(Object e) {
+        switch (e) {
+            case E.A: return "a";
+            case E.B: return "b";
+            case Runnable x when "C".equals(x.toString()): return "C";
+            case E x: return e == E.C ? "broken" : String.valueOf(x);
+            case null: return "null";
+            default: throw new AssertionError("Unexpected case!");
+        }
+    }
+
+    String testEnumWithGuardsExpression5(Object e) {
+        return switch (e) {
+            case E.A -> "a";
+            case E.B -> "b";
+            case Runnable x when "C".equals(x.toString()) -> "C";
+            case E x -> e == E.C ? "broken" : String.valueOf(x);
+            case null -> "null";
+            default -> throw new AssertionError("Unexpected case!");
         };
     }
 
     String testStringWithGuards1(E e) {
         switch (e != null ? e.name() : null) {
             case "A": return "a";
-            case "B": return "b";
-            case String x && "C".equals(x): return "C";
-            case "C": return "broken";
-            case null, String x: return String.valueOf(x);
+            case Switches.ConstantClassClash: return "b";
+            case String x when "C".equals(x): return "C";
+            case String x: return "C".equals(x) ? "broken" : String.valueOf(x);
+            case null: return "null";
         }
     }
 
     String testStringWithGuardsExpression1(E e) {
         return switch (e != null ? e.name() : null) {
             case "A" -> "a";
-            case "B" -> "b";
-            case String x && "C".equals(x) -> "C";
-            case "C" -> "broken";
-            case null, String x -> String.valueOf(x);
+            case ConstantClassClash -> "b";
+            case String x when "C".equals(x) -> "C";
+            case String x -> e == E.C ? "broken" : String.valueOf(x);
+            case null -> "null";
         };
     }
 
@@ -268,9 +395,9 @@ public class Switches {
         switch (e != null ? e.ordinal() : null) {
             case 0: return "a";
             case 1: return "b";
-            case Integer x && x.equals(2): return "C";
-            case 2: return "broken";
-            case null, Integer x: return String.valueOf(x);
+            case Integer x when x.equals(2): return "C";
+            case Integer x: return Objects.equals(x, 2) ? "broken" : String.valueOf(x);
+            case null: return "null";
         }
     }
 
@@ -278,10 +405,60 @@ public class Switches {
         return switch (e != null ? e.ordinal() : null) {
             case 0 -> "a";
             case 1 -> "b";
-            case Integer x && x.equals(2) -> "C";
-            case 2 -> "broken";
-            case null, Integer x -> String.valueOf(x);
+            case Integer x when x.equals(2) -> "C";
+            case Integer x -> Objects.equals(x, 2) ? "broken" : String.valueOf(x);
+            case null -> "null";
         };
+    }
+
+    Integer testFallThroughStatement(Integer i) {
+        int r = 0;
+
+        switch (i) {
+            case Integer o when o != null:
+                r = 1;
+            default:
+                r = 2;
+        }
+
+        return r;
+    }
+
+    Integer testFallThroughExpression(Integer i) {
+        int r = switch (i) {
+            case Integer o when o != null:
+                r = 1;
+            default:
+                r = 2;
+                yield r;
+        };
+
+        return r;
+    }
+
+    Integer testFallThrough2Statement(Integer i) {
+        int r = 0;
+
+        switch (i) {
+            case Integer o when o != null:
+                r = 1;
+            case null, default:
+                r = 2;
+        }
+
+        return r;
+    }
+
+    Integer testFallThrough2Expression(Integer i) {
+        int r = switch (i) {
+            case Integer o when o != null:
+                r = 1;
+            case null, default:
+                r = 2;
+                yield r;
+        };
+
+        return r;
     }
 
     void npeTestStatement(I i) {
@@ -299,16 +476,248 @@ public class Switches {
     }
 
     void exhaustiveStatementSane(Object o) {
-        switch (o) {
-            case Object obj:; //no break intentionally - should not fall through to any possible default
+        try {
+            switch (o) {
+                case Object obj:; //no break intentionally - should not fall through to any possible default
+            }
+            if (o == null) {
+                throw new AssertionError();
+            }
+        } catch (NullPointerException ex) {
+            if (o != null) {
+                throw new AssertionError();
+            }
         }
         switch (o) {
-            case null, Object obj:; //no break intentionally - should not fall through to any possible default
-        }
-        switch (o) {
-            case Object obj, null:; //no break intentionally - should not fall through to any possible default
+            case Object obj: int i;
+            case null:; //no break intentionally - should not fall through to any possible default
         }
     }
+
+    void exhaustiveStatementSane2(I i) {
+        switch (i) {
+            case A a: break;
+            case B b:; //no break intentionally - should not fall through to any possible default
+            case null:;
+        }
+        switch (i) {
+            case A a -> {}
+            case B b -> {}
+            case null -> {}
+        }
+    }
+
+    String switchNestingStatementStatement(Object o1, Object o2) {
+        switch (o1) {
+            case String s1 -> {
+                switch (o2) {
+                    case String s2 -> {
+                        return "string, string";
+                    }
+                    default -> {
+                        return "string, other";
+                    }
+                }
+            }
+            default -> {
+                switch (o2) {
+                    case String s2 -> {
+                        return "other, string";
+                    }
+                    default -> {
+                        return "other, other";
+                    }
+                }
+            }
+        }
+    }
+
+    String switchNestingStatementExpression(Object o1, Object o2) {
+        switch (o1) {
+            case String s1 -> {
+                return switch (o2) {
+                    case String s2 -> "string, string";
+                    default -> "string, other";
+                };
+            }
+            default -> {
+                return switch (o2) {
+                    case String s2 -> "other, string";
+                    default -> "other, other";
+                };
+            }
+        }
+    }
+
+    String switchNestingExpressionStatement(Object o1, Object o2) {
+        return switch (o1) {
+            case String s1 -> {
+                switch (o2) {
+                    case String s2 -> {
+                        yield "string, string";
+                    }
+                    default -> {
+                        yield "string, other";
+                    }
+                }
+            }
+            default -> {
+                switch (o2) {
+                    case String s2 -> {
+                        yield "other, string";
+                    }
+                    default -> {
+                        yield "other, other";
+                    }
+                }
+            }
+        };
+    }
+
+    String switchNestingExpressionExpression(Object o1, Object o2) {
+        return switch (o1) {
+            case String s1 ->
+                switch (o2) {
+                    case String s2 -> "string, string";
+                    default -> "string, other";
+                };
+            default ->
+                switch (o2) {
+                    case String s2 -> "other, string";
+                    default -> "other, other";
+                };
+        };
+    }
+
+    String switchNestingIfSwitch(Object o1, Object o2) {
+        BiFunction<Object, Object, String> f = (n1, n2) -> {
+            if (o1 instanceof CharSequence cs) {
+                return switch (cs) {
+                    case String s1 ->
+                        switch (o2) {
+                            case String s2 -> "string, string";
+                            default -> "string, other";
+                        };
+                    default ->
+                        switch (o2) {
+                            case String s2 -> "other, string";
+                            default -> "other, other";
+                        };
+                };
+            } else {
+                return switch (o2) {
+                            case String s2 -> "other, string";
+                            default -> "other, other";
+                        };
+            }
+        };
+        return f.apply(o1, o2);
+    }
+
+    private void switchOverNullNPE(I i) {
+        int r = switch (null) {
+            default -> 1;
+        };
+    }
+
+    private int  switchOverNull1() {
+        return switch (null) {
+            case Object o -> 2;
+        };
+    }
+
+    private int  switchOverNull2() {
+        return switch (null) {
+            case null -> 2;
+            default -> 1;
+        };
+    }
+
+    private int  switchOverNull3() {
+        return switch (null) {
+            case null -> 2;
+            case Object o -> 1;
+        };
+    }
+
+    private int switchOverPrimitiveInt(Integer i) {
+        return switch (i) {
+            case 0 -> 5 + 0;
+            case Integer j when j == 1 -> 6 + j;
+            case Integer j -> 7 + j;
+        };
+    }
+
+    String deconstructStatement(Object o) {
+        switch (o) {
+            case R(String s) -> {return s;}
+            case R(Integer i) -> {return i.toString();}
+            case Object x -> {return "other";}
+        }
+    }
+
+    String deconstructExpression(Object o) {
+        return switch (o) {
+            case R(String s) -> s;
+            case R(Integer i) -> i.toString();
+            case Object x -> "other";
+        };
+    }
+
+    String translationTest(Object o) {
+        return switch (o) {
+            case R(String s) -> "R" + s;
+            case String s -> s;
+            case R2(String s) -> "R2" + s;
+            default -> "other";
+        };
+    }
+
+    String totalPatternAndNull(Integer in) {
+        return switch (in) {
+            case -1: { yield "";}
+            case null: { yield "OK";}
+            case Integer i: { yield "OK";}
+        };
+    }
+
+    String nullAfterTotal(Object o) {
+        return switch (o) {
+            case Object obj: { yield "1";}
+            case null: { yield "OK";}
+        };
+    }
+
+    void emptyFallThrough(Object o) {
+        switch (o) {
+            case Integer i:
+            case String s:
+            case Object obj:
+        }
+    }
+
+    void testSimpleSwitch() {
+        Object o = "";
+        int res;
+        switch (o) {
+            default -> res = 1;
+        };
+        assertEquals(1, res);
+    }
+
+    void testSimpleSwitchExpression() {
+        Object o = "";
+        int res = switch (o) {
+            default -> 1;
+        };
+        assertEquals(1, res);
+    }
+
+    //verify that for cases like:
+    //case ConstantClassClash ->
+    //ConstantClassClash is interpreted as a field, not as a class
+    private static final String ConstantClassClash = "B";
+    private static class ConstantClassClash {}
 
     sealed interface I {}
     final class A implements I {}
@@ -338,7 +747,12 @@ public class Switches {
         }
     }
 
-    public enum E {
+    public enum E implements Runnable {
         A, B, C;
+
+        @Override public void run() {}
     }
+
+    record R(Object o) {}
+    record R2(Object o) {}
 }
